[#1] Ensure spacing between icons and menu label.

--- a/source/dbootstrap/theme/bootstrap/Menu.styl
+++ b/source/dbootstrap/theme/bootstrap/Menu.styl
@@ -122,8 +122,7 @@
 }
 
 .bootstrap td.dijitMenuItemLabel {
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding: 6px 0.3em;
 }
 
 .bootstrap tr.dijitMenuItem td:first-child {
